--- a/ukol_9.ipynb
+++ b/ukol_9.ipynb
@@ -431,12 +431,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "měřeno v Fahrenheitech :Dd"
+    "měřeno v Fahrenheitech :D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "[722 rows x 5 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
